# colourettu

./: .buildinfo  .editorconfig  .gitignore  .pyup.yml  .travis.yml  Changes.md  LICENSE  MANIFEST.in  README.md  build-requirements.in  build-requirements.txt  changelog.html  changes.rst  class-colour.html  class-palette.html  contents.html  function-blend.html  function-contrast.html  function-luminance.html  genindex.html  index.html  invoke.yaml  license.html  make-release.py  make_release.py  module-colourettu.html  objects.inv  py-modindex.html  readme.rst  requirements.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tasks.py  upgrades.html
.requirements/: base.txt  build.in  build.txt  docs.in  docs.txt  test.in  test.txt
_modules/: colourettu.html  index.html
_sources/: changelog.rst.txt  class-colour.rst.txt  class-colour.txt  class-palette.rst.txt  class-palette.txt  contents.rst.txt  function-blend.rst.txt  function-blend.txt  function-contrast.rst.txt  function-contrast.txt  function-luminance.rst.txt  function-luminance.txt  index.txt  license.rst.txt  requirements.rst.txt  requirements.txt  upgrades.rst.txt
_static/: basic.css  cloud.css  cloud.js  documentation_options.js
colourettu/: __init__.py  __version__.py  _colour.py  _palette.py
docs/: changelog.rst  conf.py  contents.rst  index.rst  make.bat  module-colourettu.rst  requirements.rst  requirements.txt  themes.txt  upgrades.rst
test/: test_colour.py  test_palette.py
tests/: requirements.txt  test_colour.py  test_contrast.py  test_luminance.py  test_palette.py  (+1 more)
(+13 files in other folders)
