[zest.releaser]
python-file-with-version = colourettu/__init__.py
create-wheel = yes
extra-message = [ci skip]

[wheel]
universal = 1

[isort]
known_first_party =
  colourettu
  minchin

[check-manifest]
ignore =
  .editorconfig
  make_release.py
  .github
  .github/*
  .travis.yml
  .pyup.yml

[metadata]
license_file = LICENSE
